--- a/src/app/backoffice/backoffice.component.html
+++ b/src/app/backoffice/backoffice.component.html
@@ -3,6 +3,22 @@
   <div class="row">
       <!--Left side-->
     <div class="left col-lg-4 col-12">
+      <div class="card mb-3">
+        <div class="card-body">
+          <div class="px-xl-3">
+            <button class="btn btn-block btn-primary" routerLink="/home">
+              <i class="fa fa-home" aria-hidden="true"></i>
+              <span> Volver al inicio</span>
+            </button>
+          </div>
+          <div class="px-xl-3">
+            <button class="btn btn-block btn-secondary" (click)="logoutUser()">
+              <i class="fa fa-sign-out"></i>
+              <span> Logout</span>
+            </button>
+          </div>
+        </div>
+      </div>
       <aside class="aside section mb-4">
         <div class="card shadow-sm rounded">
           <div class="content p-4">
@@ -34,29 +50,13 @@
         </div>
       </aside>
     </div>
-
-    <div class="col-12 col-md-3 mb-3">
-      <div class="card mb-3">
-        <div class="card-body">
-          <div class="px-xl-3">
-            <button class="btn btn-block btn-primary" routerLink="/home">
-              <i class="fa fa-home" aria-hidden="true"></i>
-              <span> Volver al inicio</span>
-            </button>
-          </div>
-          <div class="px-xl-3">
-            <button class="btn btn-block btn-secondary" (click)="logoutUser()">
-              <i class="fa fa-sign-out"></i>
-              <span> Logout</span>
-            </button>
-          </div>
-        </div>
+    <div class="right col-lg-8 col-12">
+      <div class="router-content">
+        <router-outlet></router-outlet>
       </div>
     </div>
-
   </div>
 </div>
-<router-outlet></router-outlet>
 
 
 <ng-template #elseBlock>
